[metadata]
name = iTTS
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/iTTS.py
description = A kernel for Jupyter (and IPython) speaking text with a TTS
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = TTS, speech-dispatcher, speech synthesis
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Framework :: IPython
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	#speechd # deb package doesn't contain the metadata making pip see it
	IPython

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
trie = datrie
